// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Thumbnail> Snapshots and structure should render story 'Clickable' 1`] = `
<div
  className="lumx-thumbnail lumx-thumbnail--size-xxl lumx-thumbnail--theme-light"
  onClick={[Function]}
  onKeyPress={[Function]}
  role="button"
  tabIndex={0}
>
  <div
    className="lumx-thumbnail__background"
    style={
      Object {
        "display": undefined,
        "visibility": "hidden",
      }
    }
  >
    <img
      alt="Click me"
      className="lumx-thumbnail__image"
      loading="lazy"
      src="landscape1.jpg"
      style={Object {}}
    />
  </div>
</div>
`;

exports[`<Thumbnail> Snapshots and structure should render story 'CustomFallback' 1`] = `
<div
  className="lumx-thumbnail lumx-thumbnail--theme-light"
>
  <div
    className="lumx-thumbnail__background"
    style={
      Object {
        "display": undefined,
        "visibility": "hidden",
      }
    }
  >
    <img
      alt="foo"
      className="lumx-thumbnail__image"
      loading="lazy"
      src="foo"
      style={Object {}}
    />
  </div>
</div>
`;

exports[`<Thumbnail> Snapshots and structure should render story 'Default' 1`] = `
<div
  className="lumx-thumbnail lumx-thumbnail--size-xxl lumx-thumbnail--theme-light"
>
  <div
    className="lumx-thumbnail__background"
    style={
      Object {
        "display": undefined,
        "visibility": "hidden",
      }
    }
  >
    <img
      alt="Image alt text"
      className="lumx-thumbnail__image"
      loading="lazy"
      src="landscape1.jpg"
      style={Object {}}
    />
  </div>
</div>
`;

exports[`<Thumbnail> Snapshots and structure should render story 'DefaultFallback' 1`] = `
<div
  className="lumx-thumbnail lumx-thumbnail--theme-light"
>
  <div
    className="lumx-thumbnail__background"
    style={
      Object {
        "display": undefined,
        "visibility": "hidden",
      }
    }
  >
    <img
      alt="foo"
      className="lumx-thumbnail__image"
      loading="lazy"
      src="foo"
      style={Object {}}
    />
  </div>
</div>
`;

exports[`<Thumbnail> Snapshots and structure should render story 'IconFallback' 1`] = `
<div
  className="lumx-thumbnail lumx-thumbnail--theme-light"
>
  <div
    className="lumx-thumbnail__background"
    style={
      Object {
        "display": undefined,
        "visibility": "hidden",
      }
    }
  >
    <img
      alt="foo"
      className="lumx-thumbnail__image"
      loading="lazy"
      src="foo"
      style={Object {}}
    />
  </div>
</div>
`;

exports[`<Thumbnail> Snapshots and structure should render story 'WithBadge' 1`] = `
<div
  className="lumx-thumbnail lumx-thumbnail--aspect-ratio-square lumx-thumbnail--size-l lumx-thumbnail--theme-light lumx-thumbnail--variant-rounded lumx-thumbnail--has-badge"
>
  <div
    className="lumx-thumbnail__background"
    style={
      Object {
        "display": undefined,
        "visibility": "hidden",
      }
    }
  >
    <img
      alt="Image alt text"
      className="lumx-thumbnail__image"
      loading="lazy"
      src="landscape1.jpg"
      style={Object {}}
    />
  </div>
  <Badge
    className="lumx-thumbnail__badge"
    color="primary"
  >
    <Icon
      icon="M4 2A2 2 0 0 0 2 4V12H4V8H6V12H8V4A2 2 0 0 0 6 2H4M4 4H6V6H4M22 15.5V14A2 2 0 0 0 20 12H16V22H20A2 2 0 0 0 22 20V18.5A1.54 1.54 0 0 0 20.5 17A1.54 1.54 0 0 0 22 15.5M20 20H18V18H20V20M20 16H18V14H20M5.79 21.61L4.21 20.39L18.21 2.39L19.79 3.61Z"
    />
  </Badge>
</div>
`;
